// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should provide full segment lists for each candidate: balanced win 1`] = `
Array [
  Object {
    "assignedVotes": Object {
      "A": Array [
        Object {
          "1": "A",
          "2": "D",
          "3": "C",
          "4": "B",
          "5": "E",
        },
      ],
      "B": Array [
        Object {
          "1": "B",
          "2": "D",
          "3": "C",
          "4": "A",
          "5": "E",
        },
      ],
      "C": Array [
        Object {
          "1": "C",
          "2": "B",
          "3": "A",
          "4": "D",
          "5": "E",
        },
      ],
      "D": Array [
        Object {
          "1": "D",
          "2": "C",
          "3": "B",
          "4": "A",
          "5": "E",
        },
        Object {
          "1": "D",
          "2": "A",
          "3": "C",
          "4": "E",
          "5": "B",
        },
      ],
      "E": Array [
        Object {
          "1": "E",
          "2": "A",
          "3": "C",
          "4": "D",
          "5": "B",
        },
        Object {
          "1": "E",
          "2": "B",
          "3": "C",
          "4": "D",
          "5": "A",
        },
      ],
    },
    "loser": "A",
    "previousLosers": Array [],
    "previousWinners": Array [],
    "segments": Object {
      "A": Map {
        "A" => 1,
        "B" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "B": Map {
        "B" => 1,
        "A" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "C": Map {
        "C" => 1,
        "A" => 0,
        "B" => 0,
        "D" => 0,
        "E" => 0,
      },
      "D": Map {
        "D" => 2,
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "E" => 0,
      },
      "E": Map {
        "E" => 2,
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "D" => 0,
      },
    },
    "totals": Object {
      "A": 1,
      "B": 1,
      "C": 1,
      "D": 2,
      "E": 2,
    },
    "validVoteCount": 7,
    "winners": Array [],
  },
  Object {
    "assignedVotes": Object {
      "A": Array [],
      "B": Array [
        Object {
          "1": "B",
          "2": "D",
          "3": "C",
          "4": "A",
          "5": "E",
        },
      ],
      "C": Array [
        Object {
          "1": "C",
          "2": "B",
          "3": "A",
          "4": "D",
          "5": "E",
        },
      ],
      "D": Array [
        Object {
          "1": "D",
          "2": "C",
          "3": "B",
          "4": "A",
          "5": "E",
        },
        Object {
          "1": "A",
          "2": "D",
          "3": "C",
          "4": "B",
          "5": "E",
        },
        Object {
          "1": "D",
          "2": "A",
          "3": "C",
          "4": "E",
          "5": "B",
        },
      ],
      "E": Array [
        Object {
          "1": "E",
          "2": "A",
          "3": "C",
          "4": "D",
          "5": "B",
        },
        Object {
          "1": "E",
          "2": "B",
          "3": "C",
          "4": "D",
          "5": "A",
        },
      ],
    },
    "loser": "B",
    "previousLosers": Array [
      "A",
    ],
    "previousWinners": Array [],
    "segments": Object {
      "A": Map {
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "B": Map {
        "B" => 1,
        "A" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "C": Map {
        "C" => 1,
        "A" => 0,
        "B" => 0,
        "D" => 0,
        "E" => 0,
      },
      "D": Map {
        "D" => 2,
        "A" => 1,
        "B" => 0,
        "C" => 0,
        "E" => 0,
      },
      "E": Map {
        "E" => 2,
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "D" => 0,
      },
    },
    "totals": Object {
      "A": 0,
      "B": 1,
      "C": 1,
      "D": 3,
      "E": 2,
    },
    "validVoteCount": 7,
    "winners": Array [],
  },
  Object {
    "assignedVotes": Object {
      "A": Array [],
      "B": Array [],
      "C": Array [
        Object {
          "1": "C",
          "2": "B",
          "3": "A",
          "4": "D",
          "5": "E",
        },
      ],
      "D": Array [
        Object {
          "1": "B",
          "2": "D",
          "3": "C",
          "4": "A",
          "5": "E",
        },
        Object {
          "1": "D",
          "2": "C",
          "3": "B",
          "4": "A",
          "5": "E",
        },
        Object {
          "1": "A",
          "2": "D",
          "3": "C",
          "4": "B",
          "5": "E",
        },
        Object {
          "1": "D",
          "2": "A",
          "3": "C",
          "4": "E",
          "5": "B",
        },
      ],
      "E": Array [
        Object {
          "1": "E",
          "2": "A",
          "3": "C",
          "4": "D",
          "5": "B",
        },
        Object {
          "1": "E",
          "2": "B",
          "3": "C",
          "4": "D",
          "5": "A",
        },
      ],
    },
    "loser": null,
    "previousLosers": Array [
      "A",
      "B",
    ],
    "previousWinners": Array [],
    "segments": Object {
      "A": Map {
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "B": Map {
        "B" => 0,
        "A" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "C": Map {
        "C" => 1,
        "A" => 0,
        "B" => 0,
        "D" => 0,
        "E" => 0,
      },
      "D": Map {
        "D" => 2,
        "A" => 1,
        "B" => 1,
        "C" => 0,
        "E" => 0,
      },
      "E": Map {
        "E" => 2,
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "D" => 0,
      },
    },
    "totals": Object {
      "A": 0,
      "B": 0,
      "C": 1,
      "D": 4,
      "E": 2,
    },
    "validVoteCount": 7,
    "winners": Array [
      "D",
    ],
  },
]
`;

exports[`should run multiple rounds with the winner on the last only: balanced win 1`] = `
Array [
  Object {
    "assignedVotes": Object {
      "A": Array [
        Object {
          "1": "A",
          "2": "D",
          "3": "C",
          "4": "B",
          "5": "E",
        },
      ],
      "B": Array [
        Object {
          "1": "B",
          "2": "D",
          "3": "C",
          "4": "A",
          "5": "E",
        },
      ],
      "C": Array [
        Object {
          "1": "C",
          "2": "B",
          "3": "A",
          "4": "D",
          "5": "E",
        },
      ],
      "D": Array [
        Object {
          "1": "D",
          "2": "C",
          "3": "B",
          "4": "A",
          "5": "E",
        },
        Object {
          "1": "D",
          "2": "A",
          "3": "C",
          "4": "E",
          "5": "B",
        },
      ],
      "E": Array [
        Object {
          "1": "E",
          "2": "A",
          "3": "C",
          "4": "D",
          "5": "B",
        },
        Object {
          "1": "E",
          "2": "B",
          "3": "C",
          "4": "D",
          "5": "A",
        },
      ],
    },
    "loser": "A",
    "previousLosers": Array [],
    "previousWinners": Array [],
    "segments": Object {
      "A": Map {
        "A" => 1,
        "B" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "B": Map {
        "B" => 1,
        "A" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "C": Map {
        "C" => 1,
        "A" => 0,
        "B" => 0,
        "D" => 0,
        "E" => 0,
      },
      "D": Map {
        "D" => 2,
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "E" => 0,
      },
      "E": Map {
        "E" => 2,
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "D" => 0,
      },
    },
    "totals": Object {
      "A": 1,
      "B": 1,
      "C": 1,
      "D": 2,
      "E": 2,
    },
    "validVoteCount": 7,
    "winners": Array [],
  },
  Object {
    "assignedVotes": Object {
      "A": Array [],
      "B": Array [
        Object {
          "1": "B",
          "2": "D",
          "3": "C",
          "4": "A",
          "5": "E",
        },
      ],
      "C": Array [
        Object {
          "1": "C",
          "2": "B",
          "3": "A",
          "4": "D",
          "5": "E",
        },
      ],
      "D": Array [
        Object {
          "1": "D",
          "2": "C",
          "3": "B",
          "4": "A",
          "5": "E",
        },
        Object {
          "1": "A",
          "2": "D",
          "3": "C",
          "4": "B",
          "5": "E",
        },
        Object {
          "1": "D",
          "2": "A",
          "3": "C",
          "4": "E",
          "5": "B",
        },
      ],
      "E": Array [
        Object {
          "1": "E",
          "2": "A",
          "3": "C",
          "4": "D",
          "5": "B",
        },
        Object {
          "1": "E",
          "2": "B",
          "3": "C",
          "4": "D",
          "5": "A",
        },
      ],
    },
    "loser": "B",
    "previousLosers": Array [
      "A",
    ],
    "previousWinners": Array [],
    "segments": Object {
      "A": Map {
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "B": Map {
        "B" => 1,
        "A" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "C": Map {
        "C" => 1,
        "A" => 0,
        "B" => 0,
        "D" => 0,
        "E" => 0,
      },
      "D": Map {
        "D" => 2,
        "A" => 1,
        "B" => 0,
        "C" => 0,
        "E" => 0,
      },
      "E": Map {
        "E" => 2,
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "D" => 0,
      },
    },
    "totals": Object {
      "A": 0,
      "B": 1,
      "C": 1,
      "D": 3,
      "E": 2,
    },
    "validVoteCount": 7,
    "winners": Array [],
  },
  Object {
    "assignedVotes": Object {
      "A": Array [],
      "B": Array [],
      "C": Array [
        Object {
          "1": "C",
          "2": "B",
          "3": "A",
          "4": "D",
          "5": "E",
        },
      ],
      "D": Array [
        Object {
          "1": "B",
          "2": "D",
          "3": "C",
          "4": "A",
          "5": "E",
        },
        Object {
          "1": "D",
          "2": "C",
          "3": "B",
          "4": "A",
          "5": "E",
        },
        Object {
          "1": "A",
          "2": "D",
          "3": "C",
          "4": "B",
          "5": "E",
        },
        Object {
          "1": "D",
          "2": "A",
          "3": "C",
          "4": "E",
          "5": "B",
        },
      ],
      "E": Array [
        Object {
          "1": "E",
          "2": "A",
          "3": "C",
          "4": "D",
          "5": "B",
        },
        Object {
          "1": "E",
          "2": "B",
          "3": "C",
          "4": "D",
          "5": "A",
        },
      ],
    },
    "loser": null,
    "previousLosers": Array [
      "A",
      "B",
    ],
    "previousWinners": Array [],
    "segments": Object {
      "A": Map {
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "B": Map {
        "B" => 0,
        "A" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "C": Map {
        "C" => 1,
        "A" => 0,
        "B" => 0,
        "D" => 0,
        "E" => 0,
      },
      "D": Map {
        "D" => 2,
        "A" => 1,
        "B" => 1,
        "C" => 0,
        "E" => 0,
      },
      "E": Map {
        "E" => 2,
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "D" => 0,
      },
    },
    "totals": Object {
      "A": 0,
      "B": 0,
      "C": 1,
      "D": 4,
      "E": 2,
    },
    "validVoteCount": 7,
    "winners": Array [
      "D",
    ],
  },
]
`;

exports[`should run only round 0 and return results: early win 1`] = `
Array [
  Object {
    "assignedVotes": Object {
      "A": Array [
        Object {
          "1": "A",
          "2": "D",
          "3": "C",
          "4": "B",
          "5": "E",
        },
      ],
      "B": Array [],
      "C": Array [
        Object {
          "1": "C",
          "2": "B",
          "3": "A",
          "4": "D",
          "5": "E",
        },
      ],
      "D": Array [
        Object {
          "1": "D",
          "2": "B",
          "3": "C",
          "4": "A",
          "5": "E",
        },
        Object {
          "1": "D",
          "2": "C",
          "3": "B",
          "4": "A",
          "5": "E",
        },
        Object {
          "1": "D",
          "2": "E",
          "3": "C",
          "4": "A",
          "5": "B",
        },
        Object {
          "1": "D",
          "2": "A",
          "3": "C",
          "4": "E",
          "5": "B",
        },
      ],
      "E": Array [
        Object {
          "1": "E",
          "2": "B",
          "3": "C",
          "4": "D",
          "5": "A",
        },
      ],
    },
    "loser": null,
    "previousLosers": Array [],
    "previousWinners": Array [],
    "segments": Object {
      "A": Map {
        "A" => 1,
        "B" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "B": Map {
        "B" => 0,
        "A" => 0,
        "C" => 0,
        "D" => 0,
        "E" => 0,
      },
      "C": Map {
        "C" => 1,
        "A" => 0,
        "B" => 0,
        "D" => 0,
        "E" => 0,
      },
      "D": Map {
        "D" => 4,
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "E" => 0,
      },
      "E": Map {
        "E" => 1,
        "A" => 0,
        "B" => 0,
        "C" => 0,
        "D" => 0,
      },
    },
    "totals": Object {
      "A": 1,
      "B": 0,
      "C": 1,
      "D": 4,
      "E": 1,
    },
    "validVoteCount": 7,
    "winners": Array [
      "D",
    ],
  },
]
`;
